--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@livekit/components-react": "^2.9.3",
     "@livekit/components-styles": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "bootstrap": "^5.3.7",
     "cookies-next": "^4.3.0",
     "framer-motion": "^10.18.0",
+    "git": "^0.1.5",
     "js-yaml": "^4.1.0",
     "livekit-client": "^2.9.5",
     "livekit-server-sdk": "^2.13.0",
@@ -23,20 +25,32 @@
     "next-plugin-preval": "^1.2.6",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.13",
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.3",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.26",
+    "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
-    "prettier": "^3.4.2"
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
